<resources>
    <string name="app_name">Image Search</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="image_size">Image size</string>
    <string name="color_filter">Color filter</string>
    <string name="image_type">Image type</string>
    <string name="result_size">Result size</string>
    <string name="site_filter">Site filter</string>
    <string name="site_filter_hint">google.com</string>
    <string name="filter_settings">Filter settings</string>
    <string name="done">Done</string>
    <string name="select_one">Select one</string>
    <string name="no_results_found">No Results Found</string>
</resources>
